--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/test
+spring.datasource.url=jdbc:mariadb://localhost:3306/mysql
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.sql.init.enabled=true
+
+logging.level.sql=debug
 logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
